--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -152,6 +152,34 @@ h5 {
 /* Your code starts here! */
 nav ul li {
   display: inline-block;
-  justify-content: space-around;
   margin: 50px 50px 50px 50px;
+}
+
+.hero ul li {
+  display: inline-block;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+.features-about ul {
+  display: inline-block;
+}
+
+button {
+  font-family: Lato;
+  border: 1px solid black;
+  background-color: white;
+  padding: 10px;
+  font-size: 18px;
+  text-align: center;
+}
+
+.middle-image {
+  text-align: center;
+}
+
+.panels {
+  display: inline-block;
 }
