--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -153,122 +153,40 @@ h5 {
 
 /* Your code starts here! */
 .container {
-  margin: 0 50px 0 50px;
   width: 960px;
+  margin: 100px;
 }
 
 .nav {
   text-align: center;
-  padding: 0;
-  color: lightgray;
-  width: 100%;
 }
+
 .nav li {
   display: inline-block;
-  padding: 20px;
-  margin: 0 1%;
-}
-
-.logo {
-  text-align: right;
-}
-
-.hero {
-  margin: 100px 0 50px 0;
-  text-align: center;
+  margin: 3%;
 }
 
 .hero li {
   display: inline-block;
-  text-align: center;
-}
-
-.code-snippet {
-  margin-left: 150px;
-}
-
-.tagline h1 {
-  font-size: 70px;
-  /* margin-right: 200px; */
-  /* margin-top: -150px; */
-  /* margin-left: 50px; */
-  /* text-align: center; */
-  width: 250px;
 }
 
 .tagline {
-  margin: 0;
-  /* position: absolute; */
-  top: 50%;
-  /* transform: translateY(-50%); */
-  /* margin-right: 50px; */
-  width: 200px;
-  /* text-align: center; */
+  text-align: center;
+  margin-left: 0.5%;
+}
+
+.tagline h1 {
+  font-size: 80px;
+}
+
+.code-snippet {
+  margin: 20px 0 50px 25%;
 }
 
 button {
-  /* font-family: Lato; */
-  border: 1px solid black;
   background-color: white;
-  padding: 10px;
-  font-size: 18px;
-  text-align: center;
+  border: 1px solid black;
   width: 200px;
   height: 35px;
-  margin-left: 30px;
-}
-
-.features {
-  text-align: justify;
-  max-width: 100%;
-  margin: auto;
-}
-.features li {
-  display: inline-block;
-  padding: 10px;
-}
-
-.features p {
-  width: 450px;
-}
-
-hr {
-  max-width: 100%;
-  margin: 50px 0;
-}
-
-.services {
-  /* text-align: justify; */
-  margin: auto;
-
-  /* margin: 10px;
-  padding: 10px; */
-}
-.services li {
-  display: inline-block;
-  position: relative;
-  width: 33%;
-}
-
-/* .middle-image {
-  text-align: centerß;
-} */
-
-.middle-img {
-  width: 960px;
-  max-height: 100%;
-  margin: 20px 0 20px 0;
-}
-
-.services li {
-  display: inline-block;
-}
-
-address li {
-  margin: 10px 0 10px 0;
-}
-
-.copyright {
-  text-align: center;
-  margin: 50px;
+  font-size: 18px;
 }
