--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -164,6 +164,7 @@ h5 {
 .nav li {
   display: inline-block;
   margin: 3%;
+  color: lightgray;
 }
 
 .hero li {
@@ -172,7 +173,8 @@ h5 {
 
 .tagline {
   text-align: center;
-  margin-left: 0.5%;
+  margin-left: 40px;
+  margin-bottom: 100px;
 }
 
 .tagline h1 {
@@ -180,7 +182,7 @@ h5 {
 }
 
 .code-snippet {
-  margin: 20px 0 50px 25%;
+  margin: 20px 0 50px 22%;
 }
 
 button {
