--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -153,18 +153,22 @@ h5 {
 
 /* Your code starts here! */
 .container {
-  width: 960px;
-  margin: 100px;
+  width: 850px;
+  margin: 20px 100px;
 }
 
 .nav {
-  text-align: center;
+  text-align: left;
 }
 
 .nav li {
   display: inline-block;
-  margin: 3%;
+  margin: 2%;
   color: lightgray;
+}
+
+.logo {
+  text-align: right;
 }
 
 .hero li {
@@ -182,7 +186,7 @@ h5 {
 }
 
 .code-snippet {
-  margin: 20px 0 50px 22%;
+  margin: 20px 0 50px 50px;
 }
 
 button {
@@ -191,4 +195,40 @@ button {
   width: 200px;
   height: 35px;
   font-size: 18px;
+}
+
+.features li {
+  display: inline-block;
+  margin-top: 30px;
+  width: 400px;
+}
+
+.features p {
+  margin: 10px 0 40px 0;
+  max-width: 400px;
+}
+
+.first {
+  margin-left: 0;
+  margin-right: 30px;
+}
+
+.middle-img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.services li {
+  display: inline-block;
+  width: 250px;
+  margin: 30px 0 30px 20px;
+}
+
+.contact {
+  margin: 50px 0 20px 0;
+}
+
+.copyright {
+  margin-top: 50px;
+  text-align: center;
 }
