--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -163,7 +163,7 @@ h5 {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: black;
+  background-color: gray;
 }
 
 .nav li {
@@ -174,6 +174,7 @@ h5 {
 
 .logo {
   text-align: right;
+  margin-left: 100px;
 }
 
 .hero li {
