--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -138,7 +138,7 @@ table {
 html,
 body {
   height: 100%;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 h1,
