add base about page and hover action to nav link

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -172,6 +172,15 @@ h5 {
   color: lightgray;
 }
 
+a {
+  text-decoration: none;
+  color: lightgray;
+}
+
+a:hover {
+  color: white;
+}
+
 .logo {
   text-align: right;
   margin-left: 100px;
