--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -215,7 +215,7 @@ button {
 .features li {
   display: inline-block;
   margin-top: 30px;
-  width: 400px;
+  width: 48%;
 }
 
 .features p {
@@ -235,7 +235,7 @@ button {
 
 .services li {
   display: inline-block;
-  width: 250px;
+  width: 30%;
   margin: 30px 0 30px 20px;
 }
 
